--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6512,3 +6512,32 @@ a.metaportal_fn_videobutton:hover .fn__svg,
 		color: #fff;
 	}
 }
+
+
+
+/* 
+  ##Device = Low Resolution Tablets, Mobiles (Landscape)
+  ##Screen = B/w 481px to 767px
+*/
+
+@media (min-width: 481px) and (max-width: 767px) {
+  
+	/* CSS */
+	.swiper-slide{
+		width: 100vw;
+	}
+  }
+  
+  /* 
+	##Device = Most of the Smartphones Mobiles (Portrait)
+	##Screen = B/w 320px to 479px
+  */
+  
+  @media (min-width: 320px) and (max-width: 480px) {
+	
+	/* CSS */
+	.swiper-slide{
+		width: 100vw;
+	}
+	
+  }
