--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1404,7 +1404,7 @@ a.full_link{
 	max-width: 100%;
 	margin: 0;
 	padding: 0;
-	font-size: 60px;
+	font-size: 120px;
 	font-weight: 600;
 	letter-spacing: 0;
 	line-height: 1;
@@ -1413,7 +1413,7 @@ a.full_link{
 	background: linear-gradient(to right,var(--mc1), var(--mc2));
 	-webkit-background-clip: text;
 	-webkit-text-stroke: 4px transparent;
-	color: #160f1a;
+	color: #bc89da;
 	filter: drop-shadow(0 5px 20px rgba(204,0,255,.15));
 }
 
